MODPATBLK-206 fix code smells